# crypto-bank

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  NOTES.md  README.md  README.md.tmpl  lib.rs  modules.json
currency/: Cargo.toml  package-lock.json  package.json
currency/src/: index.ts  lib.rs  pairs.rs  symbols.rs  symbols.ts
currency/tools/update-coins/: coins.json  main.go  symbols.rs.tmpl  symbols.ts.tmpl
event-log/: Cargo.toml
event-log/src/: writer.rs
experiments/: .gitignore  cmc-rev.bot.js  cmc.bot.js  log2.txt  package-lock.json  package.json  push-binance.js  push.js  signalr.js
experiments/MovingAverageCrossOverAlgorithmV2/: README.md  package-lock.json
experiments/MovingAverageCrossOverAlgorithmV2/public/: index.html
experiments/MovingAverageCrossOverAlgorithmV2/src/: Chart.js  index.js  utils.js
market/: Cargo.toml
market-data/: Cargo.toml
market-data/src/: event.rs  lib.rs  market.rs  order.rs  order_book.rs  trade.rs
market-hub/: Cargo.toml
market-hub/examples/: zmq.rs
market-hub/src/: lib.rs
market-log/: Cargo.toml
market-log/examples/: poloniex-stream.rs
market-ts/: package.json
market-ts/src/: index.ts  symbols.ts
market/src/: books.rs  errors.rs  event.rs  events.rs  lib.rs  market.rs  order.rs  orderbook.rs  pairs.rs  symbols.rs  trade.rs
order-book/: Cargo.toml
order-book/examples/: poloniex-stream.rs
order-book/src/: book.rs  books.rs  lib.rs  order_book.rs  order_map.rs
src/: lib.rs
stream/: Cargo.toml  package-lock.json  package.json
stream-bittrex/: package-lock.json  package.json  tst.ts
stream-bittrex/src/: client.ts  convert.ts  index.ts  split.ts  split_.ts
stream-bittrex/typings/node-bittrex-api/: index.d.ts
stream-cryptopia/: exchange.js  package-lock.json  package.json  tsconfig.json
stream-cryptopia/src/: index.ts  parse.ts
stream-cryptopia/test/: client.ts
stream-cryptopia/typings/cryptopia/: index.d.ts
stream-cryptopia/typings/signalr-client/: index.d.ts
stream-poloniex/: Cargo.toml
stream-poloniex/examples/: poloniex-stream.rs
stream-poloniex/src/: errors.rs  lib.rs  parse.rs  serialize.rs
stream-ws/: Cargo.toml
stream-ws/src/: connect.rs  errors.rs  handle.rs  lib.rs  msg.rs
stream-zmq/: Cargo.toml  package.json
stream-zmq/examples/: zmq.rs
stream-zmq/src/: index.ts  lib.rs  zmq.rs
stream-zmq/typings/zmq/: index.d.ts
stream/src/: command.rs  event.rs  event.ts  index.ts  lib.rs
streams-ws/: Cargo.toml
streams-ws/src/: connect.rs  handle.rs  lib.rs
streams-zmq/: Cargo.toml  package-lock.json  package.json
streams-zmq/examples/: zmq.rs
streams-zmq/src/: index.ts  lib.rs
tools/update-coins/: coins.json  main.go  symbols.rs.tmpl  symbols.ts.tmpl
util/: Cargo.toml
util/src/: errors.rs  future.rs  lib.rs  option.rs  parse.rs
