[package]
name = "crypto-bank"
description = "crypto-bank"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
crypto-currency = "0.0.*"
crypto-market = "0.0.*"
crypto-market-event = "0.0.*"
crypto-market-stream = "0.0.*"
crypto-market-stream-ws = "0.0.*"
crypto-util = "0.0.*"
