[package]
name = "cb-market-hub"
description = "crypto-bank market module"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]

// cb-currency = { path = "../currency", version = "*" }
// cb-market = { path = "../market", version = "*" }
// cb-stream = { path = "../stream", version = "*" }
cb-stream-zmq = { path = "../stream-zmq", version = "*" }

[dev-dependencies]
cb-order-book = { path = "../order-book", version = "*" }
