[package]
name = "market"
description = "crypto-bank market data"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
serde = "1.*.*"
futures = "0.1.*"
bincode = "0.9.*"
serde_derive = "1.*.*"
error-chain = "0.11.*"
ordered-float = "*"

util = { path = "../util" }
