[package]
name = "cb-order-book"
description = "crypto-bank market order book module"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
ordered-float = "*"

cb-currency = { path = "../currency", version = "*" }
cb-market-data = { path = "../market-data", version = "*" }

[dev-dependencies]
futures = "0.1.*"
tokio-core = "0.1.*"
multiqueue = "0.3.*"
env_logger = "0.4.*"

log = "0.3.*"

cb-stream = { path = "../stream", version = "*" }
cb-stream-ws = { path = "../stream-ws", version = "*" }
cb-stream-poloniex = { path = "../stream-poloniex", version = "*" }
cb-util = { path = "../util", version = "*" }