[package]
name = "stream-poloniex"
description = "crypto-bank poloniex market stream"
version = "0.2.2"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
chrono = "0.3.*"
error-chain = "0.11.*"
serde_json = "1.*.*"

futures = "0.1.*"
tokio-core = "0.1.*"

websocket = "0.20.*"

market = { path = "../market" }
streams-ws = { path = "../streams-ws" }
util = { path = "../util" }

[dev-dependencies]
tokio-core = "0.1.*"
multiqueue = "0.3.*"
env_logger = "0.4.*"

log = "0.3.*"
