[package]
name = "cb-stream-ws"
description = "crypto-bank markets websocket streams"
version = "0.2.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
log = "0.3.*"
chrono = "0.3.*"
serde_json = "1.*.*"

futures = "0.1.*"
tokio-core = "0.1.*"

cb-currency = { path = "../currency", version = "*" }
cb-market-data = { path = "../market-data", version = "*" }
cb-stream = { path = "../stream", version = "*" }
cb-util = { path = "../util", version = "*" }

websocket = "0.20.*"
