[package]
name = "cb-stream-zmq"
description = "crypto-bank stream zeromq (pull)"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
zmq = { git = "https://github.com/erickt/rust-zmq.git" }

serde = "1.*.*"
serde_json = "1.*.*"

cb-stream = { path = "../stream", version = "*" }
