[package]
name = "cb-stream"
description = "crypto-bank market stream"
version = "0.2.2"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
serde = "1.*.*"
bincode = "0.9.*"
serde_derive = "1.*.*"

futures = "0.1.*"
multiqueue = "0.3.*"

cb-currency = { path = "../currency", version = "*" }
cb-market-data = { path = "../market-data", version = "*" }
