[package]
name = "cb-streams-zmq"
description = "crypto-bank zeromq stream"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]

[dependencies]
futures = "0.1.*"

zmq = { git = "https://github.com/erickt/rust-zmq.git" }

serde = "1.*.*"
serde_json = "1.*.*"

cb-market = { path = "../market" }
